Change download link and update footer message
Updated download link and footer text for clarity.

--- a/index.html
+++ b/index.html
@@ -96,13 +96,12 @@
 
     <div class="buttons">
         <a href="Sharp-HTML" class="btn download">Run</a>
-        <a href="https://sharpscratchmod.github.io/" class="btn run">Download</a>
+        <a href="dl.html" class="btn run">Download</a>
     </div>
 </div>
 
 <footer>
-    sharp is not made by me see 
-    <a href="dl.html" class="btn run">official scratch mod</a>
+    sharp is not made by me see official scratch mod (https://sharpscratchmod.github.io/)
 </footer>
 
 </body>
